--- a/templates/Blog/blogform.html
+++ b/templates/Blog/blogform.html
@@ -1,13 +1,19 @@
 {% extends 'Blog/Yappers Post.html' %}
-
+{% load static %}
 {% block title %} Write Your Blog {% endblock %}
 
 {% block content %}
-<form  method="post" enctype="multipart/form-data">
-    {{form.as_p}}
-    {% csrf_token %}
-    <input type="submit" value="Save Your Blog">
-</form>
-
+    {% if submit_status %}
+        <div class="container d-flex justify-content-center align-items-center">
+            <img src="{% static 'images/thank_you_image.png' %}" alt="Thank You For Writing">
+            <span class="fs-3">Your Form Was Submitted!</span>
+        </div>
+    {% else %}
+        <form  method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{form.as_p}}
+            <input type="submit" value="Save Your Blog">
+        </form>
+    {% endif %}
 {% endblock %}
 
