--- a/templates/Blog/viewblogs.html
+++ b/templates/Blog/viewblogs.html
@@ -1,10 +1,11 @@
 {% extends 'Blog/Yappers Post.html' %} 
+{% load static %}
 
 {% block title %} Current Blogs {% endblock %}
 
 {% block content %} 
 
-<div class="content">
+<div>
     {% if current_blogs %} 
     {%for blog_data in current_blogs %}
         <h1>Blog Title : {{blog_data.Blog_Title}}</h1>
