More Design Changes
Added a Css File to change the color of text of nav links to defined color, but dosent work now

--- a/templates/Blog/Yappers Post.html
+++ b/templates/Blog/Yappers Post.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Yappers Post</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <div class="container-fluid h-75">
+        <a class="navbar-brand css-link" href="#">Yappers Post</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPillsExample" 
                 aria-controls="navbarPillsExample" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
