--- a/static/css/home_page.css
+++ b/static/css/home_page.css
@@ -1,3 +1,109 @@
-.css-nav:hover{
-    color:#065084;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    padding:1rem;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+.nav-container>ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+}
+
+.nav-container>ul>li{
+    list-style-type: none;
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+
+ul>li>a{
+    text-decoration: none;
+    color: black;
+}
+
+.auth{
+    display: flex;
+    gap: 2rem;
+    text-decoration: none;
+
+}
+
+.auth>a{
+    border:2px solid;
+    padding: 0.50rem;
+    text-decoration: none;
+    color:black;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    border-radius: 5px;
+}
+
+.auth>a:hover{
+    background-color: #FAB12F;
+    color:#fff;
+    border-color: #DD0303;
+    scale: 1.2;
+    transition: 0.2s ease-in-out;
+}
+
+.Logo{
+    font-family: "SUSE Mono", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size:2rem;
+}
+
+.hero-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top:2rem;
+    gap: 1rem;
+}
+
+.heading-text{
+    font-size: 3rem;
+    font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.desc-text{
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size:20px;
+}
+
+.hero-btn{
+    border : 2px solid;
+    padding:0.50rem;
+    text-decoration: none;
+    color:black;
+    font-size: 1rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+}
+
+.hero-btn:hover{
+    background-color: royalblue;
+    scale:1.2;
+    border:2px solid grey;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    transition: 0.2s ease-in-out;
+    color:#fff;
 }
