--- a/templates/Blog/Yappers Post.html
+++ b/templates/Blog/Yappers Post.html
@@ -15,7 +15,7 @@
 <nav>
     <div class="nav-container">
         <ul>
-            <li><span class="Logo">Yappers Post</span></li>
+            <li><a href="{% url 'home' %}"><span class="Logo">Yappers Post</span></a></li>
         </ul>
         <div class="auth">
             <a href="#"><span>Log In</span></a>
