added login, signup functionality
Added the Login and Signup Functionality so new as well as the existing users can login or create their accounts

--- a/templates/Blog/Yappers Post.html
+++ b/templates/Blog/Yappers Post.html
@@ -19,7 +19,7 @@
         </ul>
         <div class="auth">
             <a href="{% url 'login' %}"><span>Log In</span></a>
-            <a href="#"><span>Sign UP</span></a>
+            <a href="{% url 'signup_page' %}"><span>Sign UP</span></a>
         </div>
     </div>
 </nav>
