--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-</head>
-<body>
-    <h1>Login Using Your Yapp ID and Password</h1>
-    <form action="{% url 'login' %}" method="post">
-        {{form.as_p}}
-        {% csrf_token %}
-        <input type="submit" value="Login">
-    </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login into Yappers Post</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Login Now Into <u>YaPPers Post</u></h1>
+      <form action="{% url 'login_page' %}" method="POST">
+        {% csrf_token %} {{form.as_p}}
+        <input type="submit" value="submit" />
+        {% if error_message %}
+        <div class="error_msg">
+          <p>{{error_message}}</p>
+        </div>
+        {% endif %}
+      </form>
+    </div>
+  </body>
 </html>
