--- a/static/css/home_page.css
+++ b/static/css/home_page.css
@@ -5,9 +5,13 @@
     justify-content: space-between;
     padding:1rem;
     align-items: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #fff;
+    /* background-color: #000; */
 }
 
+.nav-text{
+    color:#fff;
+}
 .nav-container>ul{
     display: flex;
     justify-content: space-between;
@@ -25,7 +29,7 @@
 
 ul>li>a{
     text-decoration: none;
-    color: black;
+    color: #fff;
 }
 
 .auth{
