--- a/templates/Blog/Yappers Post.html
+++ b/templates/Blog/Yappers Post.html
@@ -17,9 +17,15 @@
         <ul>
             <li><a href="{% url 'home' %}"><span class="Logo">Yappers Post</span></a></li>
         </ul>
-        <div class="auth">
-            <a href="{% url 'login' %}"><span>Log In</span></a>
-            <a href="{% url 'signup_page' %}"><span>Sign UP</span></a>
+        {% if not user.is_authenticated %}
+        <div class="auth ">
+            <a href="{% url 'login' %}"><span class="nav-text">Log In</span></a>
+            <a href="{% url 'signup_page' %}"><span class="nav-text">Sign UP</span></a>
+        </div>
+        {% else %}
+        <div class="user-profile">
+            <img src="{{user.profile_photo.url}}" alt="media/profile_photos/default-profile-photo" class="profile-photo">
+            <span>{{user_name}}</span>
         </div>
     </div>
 </nav>
