--- a/templates/Blog/blogform.html
+++ b/templates/Blog/blogform.html
@@ -1,6 +1,6 @@
 {% extends 'Blog/Yappers Post.html' %}
 {% load static %}
-{% block title %} Write Your Blog {% endblock %}
+{% block title %} Submit to Yappers Post {% endblock %}
 
 {% block content %}
     {% if submit_status %}
@@ -9,11 +9,18 @@
             <span class="fs-3">Your Form Was Submitted!</span>
         </div>
     {% else %}
-        <form  method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input type="submit" value="Save Your Blog">
-        </form>
+        <span class="heading">Create post</span>
+            <div class="content-types">
+                <a href="#">Text</a>
+                <a href="#">Images & Videos</a>
+                <a href="#">Link</a>
+                <a href="$">Poll</a>
+            </div>
+            <form  method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input type="submit" value="Save Your Blog">
+            </form>
     {% endif %}
 {% endblock %}
 
