Did Some UI Changes to the Main Page
Did some UI Changes so that the hero section would be displayed only when the user is not currently logged in and there is not current session, but this will make the hero session not be able to display when the user is logged in.

--- a/templates/Blog/Yappers Post.html
+++ b/templates/Blog/Yappers Post.html
@@ -37,12 +37,11 @@
     </div>
 </nav>
 
-<!-- hero-section -->
-<div class="hero-section">
-    <span class="heading-text">Discover Relateable Experiences</span>
-    <span class="desc-text">Yap to Your Heart's Content ❤️ With Fellow Yappers 🙋‍♂️, Share Common Experiences and Ideas 💡</span>
-    <a href="{% url 'blog_form' %}" class="hero-btn">Start Yapping</a>
-</div>
+{% block hero %}
+    {% if not user.is_authenticated %}
+        {% include "Blog/hero.html" %}
+    {% endif %}
+{% endblock hero %}
 
 </body>
 </html>
