--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -1,38 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
-.hero-button{
-/* From Uiverse.io by alexmaracinaru */ 
-
-  cursor: pointer;
-  font-weight: 700;
-  transition: all 0.2s;
-  padding: 10px 20px;
-  border-radius: 100px;
-  background: #FEB21A;
-  border: 1px solid transparent;
-  display: flex;
-  align-items: center;
-  font-size: 15px;
+/* ------------------------ */
+/*       HERO SECTION      */
+/* ------------------------ */
+.hero-section {
+    text-align: center;
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 0 2rem;
+    align-items: center;
 }
 
-.hero-button:hover {
-  background: #faa804;
-  font-size: large;
- 
+.heading-text {
+    font-size: 3rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
 }
 
-.hero-button> svg {
-  width: 34px;
-  margin-left: 10px;
-  transition: transform 0.3s ease-in-out;
+.desc-text {
+    font-size: 1.2rem;
+    font-weight: 600;
+    max-width: 700px;
+    margin: 0 auto;
 }
 
-.hero-button:hover svg {
-  transform: translateX(5px);
+.hero-btn {
+    display: inline-block;
+    border: 2px solid #333;
+    padding: 0.6rem 1.5rem;
+    text-decoration: none;
+    color: black;
+    font-size: 1.2rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    border-radius: 6px;
+    transition: 0.2s ease-in-out;
+    max-width: 20%;
 }
 
-.hero-button:active {
-  transform: scale(0.95);
+.hero-btn:hover {
+    background-color: royalblue;
+    color: #fff;
+    border-color: #222;
+    transform: scale(1.05);
 }
 
 
